# ixa

./: .commit-check.yml  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .prettierrc.yml  .rumdl.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  DISCLAIMER.md  Dockerfile  README.md  bench-history.json  clippy.toml  commitlint.config.cjs  criterion.toml  justfile  mise.toml  prek.toml  release-plz.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  setup.sh  terminal-welcome.txt
.devcontainer/basic-rust/: devcontainer.json
.devcontainer/dev-rust/: devcontainer.json
.devcontainer/rust-slim/: devcontainer.json
.github/: build-test.yaml  dependabot.yaml  pre-commit.yaml
.github/workflows/: bench-compare.yaml  build-test.yaml  build.yaml  check-test.yaml  docs.yml  examples.yaml  msrv.yaml  playwright.yaml  pre-commit.yaml  pull_request.yaml  release-plz-pr.yaml  release-plz-release.yaml  release-plz.yaml  semantic-pr.yaml  test-setup-new-project.yaml
_examples/basic-infection/: README.md
_examples/births-deaths/: README.md  input.json  main.rs
_examples/load-people/: README.md  logger.rs  (+3 more)
benches/: README.md
docs/: CNAME  CONTRIBUTING.md  cli-usage.md  entities-api.md  getting_started.md  index.html
docs/book/models/disease_model/: .gitignore  Cargo.toml
docs/book/models/disease_model/src/: incidence_report.rs  infection_manager.rs  main.rs  people.rs  transmission_manager.rs
examples/: README.md  profiling.md  run_examples.sh
examples/basic-infection/: Cargo.toml  README.md  incidence_report.rs  infection_manager.rs  main.rs  people.rs  plot_output.R  population_loader.rs  transmission_manager.rs
examples/basic-infection-legacy/: Cargo.toml  main.rs
examples/basic-infection-legacy/src/: incidence_report.rs  infection_manager.rs  people.rs  transmission_manager.rs
examples/basic-infection/src/: incidence_report.rs  infection_manager.rs  lib.rs  people.rs  transmission_manager.rs
examples/births-deaths/: Cargo.toml  README.md  demographics_report.rs  incidence_report.rs  infection_manager.rs  input.json  main.rs  parameters_loader.rs  plot_output.R  population_loader.rs  population_manager.rs  transmission_manager.rs
examples/births-deaths/src/: demographics_report.rs  incidence_report.rs  infection_manager.rs  lib.rs  parameters_loader.rs  population_manager.rs  transmission_manager.rs
examples/network-random/: Cargo.toml  README.md  config.json  infection.rs  main.rs  network.rs  parameters.rs  seir.rs
examples/network-random/src/: infection.rs  lib.rs  network.rs  parameters.rs
examples/profiling/: Cargo.toml  main.rs
integration-tests/ixa-macro-tests/: Cargo.toml
integration-tests/ixa-macro-tests/tests/: macros.rs
integration-tests/ixa-profiling-tests/: Cargo.toml
integration-tests/ixa-profiling-tests/tests/: profiling.rs
integration-tests/ixa-wasm-tests/: .gitignore  Cargo.toml  README.md  build.sh  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  worker.js
integration-tests/ixa-wasm-tests/src/: incidence_report.rs  infection_manager.rs  lib.rs  people.rs  transmission_manager.rs
integration-tests/ixa-wasm-tests/tests/: demo.spec.js  run-model.test.js
ixa-basic-transmission/: Cargo.toml
ixa-basic-transmission/src/: main.rs  people.json  population_loader.rs
ixa-basic-transmission/src/entities/: household.rs  mod.rs  person.rs
ixa-bench/: Cargo.toml  README.md
ixa-bench/algorithms/: algorithm_benches.rs
ixa-bench/criterion/: add_entity.rs  algorithm_benches.rs  bulk_add_people.rs  bulk_entity_add.rs  counts.rs  example_basic_infection.rs  example_births_deaths.rs  examples.rs  index_benches.rs  index_map.rs  large_dataset.rs  property_semantics.rs  query_iterator.rs  sample_entity_scaling.rs  sample_people.rs  sample_single_excluding.rs  sample_single_excluding_summary.rs  set_property.rs  test_new_bench.rs
ixa-bench/example_basic_infection/: example_basic_infection.rs
ixa-bench/example_births_deaths/: example_births_deaths.rs
ixa-bench/index/: index_benches.rs
ixa-bench/large_dataset/: large_dataset.rs
ixa-bench/reference_models/: large_sir.rs
ixa-bench/src/: check_criterion_regressions.rs  generate_population.rs  lib.rs  property_access.rs
ixa-bench/src/bench_utils/: hyperfine.rs  macros.rs  mod.rs  registry.rs  runner.rs
ixa-bench/src/reference_sir/: bench.rs  mod.rs  parameters.rs  periodic_counts.rs  sir_baseline.rs  sir_baseline_alt.rs  sir_ixa.rs  sir_ixa_entities.rs  stats.rs
ixa-bench/src/reference_sir/sir_ixa/: entities.rs  entities_sir.rs  legacy.rs  mod.rs  properties.rs
ixa-bench/tests/: sample_single_excluding_summary.rs
ixa-debugger-frontend/: index.html  package.json  vite.config.ts
ixa-derive/: CHANGELOG.md  Cargo.toml
ixa-derive/src/: lib.rs  reorder_fn.rs  sorted_tag.rs  utilities.rs
ixa-fips/: CHANGELOG.md  Cargo.toml  README.md
ixa-fips/src/: errors.rs  fips_code.rs  lib.rs  parser.rs  states.rs
ixa-fips/src/aspr/: archive.rs  errors.rs  mod.rs  parser.rs
ixa-integration-tests/: Cargo.toml
ixa-integration-tests/tests/: debugger.rs  log.rs  runner.rs
scripts/: bench_results.js  bench_results.mjs  format_bench_pr_comment.mjs  index.html  ixa_setup.sh  setup_new_ixa_project.sh  test_bench_results.sh  test_format_bench_pr_comment.sh
src/: context.rs  data_plugin.rs  debug.rs  debugger-commands.md  debugger.rs  error.rs  execution_stats.rs  extension_api.rs  external_api.rs  global_properties.rs  hash.rs  hashing.rs  indexable_map.rs  indexset_person_container.rs  lib.rs  log.rs  macros.rs  main.rs  network.rs  numeric.rs  people.rs  plan.rs  plan_queue.rs  plugin_context.rs  prelude.rs  preludev2.rs  progress.rs  random.rs  report.rs  runner.rs  settings.rs  tabulator.rs  triggers.rs  type_store.rs  value_vec.rs  vec_cell.rs  web_api.rs
static/: api.js  app.js  index.html  style.css
tests/: examples_doc.rs  population.rs  population_nonpersist.rs  population_structured.rs
website/: index.html
(+343 files in other folders)
