[package]
name = "ixa-basic-transmission"
version = "0.0.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
ixa = { path = ".." }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
