[package]
name = "ixa-bench"
version = "0.0.1"
description = "Benchmarks for ixa"
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

[package.metadata.release]
release = false

[features]
default = []

# This option includes benchmarks for algorithms we do not use in ixa.
# This allows us to compare our implementations to alternatives.
alternative_algorithm_benches = []

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
ixa-derive = { path = "../ixa-derive" }
approx.workspace = true
ixa_example_basic_infection = { path = "../examples/basic-infection" }
ixa_example_births_deaths = { path = "../examples/births-deaths" }

[dependencies]
ixa = { path = "../" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_distr.workspace = true
indexmap = "2.11.3"
derive_builder = "0.20.2"
clap = { workspace = true, features = ["derive"] }
paste.workspace = true
anyhow.workspace = true
ctor.workspace = true

[lib]
bench = false

[[bin]]
name = "hyperfine"
path = "src/bench_utils/hyperfine.rs"
bench = false

[[bin]]
name = "check_criterion_regressions"
path = "src/check_criterion_regressions.rs"
bench = false

[lints]
workspace = true

[[bench]]
name = "examples"
path = "criterion/examples.rs"
harness = false

[[bench]]
name = "large_dataset"
path = "criterion/large_dataset.rs"
harness = false

[[bench]]
name = "algorithms"
path = "criterion/algorithm_benches.rs"
harness = false

[[bench]]
name = "sampling"
path = "criterion/sample_people.rs"
harness = false

[[bench]]
name = "counts"
path = "criterion/counts.rs"
harness = false
