[package]
name = "ixa-derive"
version = "0.0.2"
description = "Procedural macros for Ixa"
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2 = "1.0.93"
proc-macro-crate = "3.3.0"

[lints]
workspace = true

[lib]
proc-macro = true
