[package]
name = "ixa-derive"
version = "0.0.2"
description = "Procedural macros for Ixa"
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
proc-macro-crate.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true
