[package]
name = "ixa-fips"
description = "A library for efficiently working with FIPS region codes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["aspr_archive"]

## Support for working with the ASPR Synthetic Population dataset # Parsing ASPR codes
aspr_archive = ["zip", "once_cell", "ouroboros"] # Reading ASPR Synthetic Population files from ZIP archives
aspr_tests = [] # Runs tests that assume the existence of ASPR Synthetic Population files from ZIP archives

[dependencies]
## Dependencies for "aspr_archive"
zip = { version = "2.6.1", optional = true }
once_cell = { version = "1", optional = true }
ouroboros = { version = "0.18.5", optional = true }

[lints]
workspace = true
