[package]
name = "ixa-fips"
description = "A library for efficiently working with FIPS region codes"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
strum .workspace = true

[lints]
workspace = true
