[package]
name = "ixa-integration-tests"
version = "0.0.1"
description = "Integration tests for ixa"
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
ixa = { path = "../" }
clap.workspace = true

[dev-dependencies]
assert_cmd = "^2.0.16"

[lints]
workspace = true

[[bin]]
name = "runner_test_custom_args"
path = "bin/runner_test_custom_args.rs"
bench = false

[[bin]]
name = "runner_test_debug"
path = "bin/runner_test_debug.rs"
bench = false
