[package]
name = "ixa_example_births_deaths"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

publish = false

[dependencies]
ixa = { path = "../../../ixa" }
ixa-derive = { path = "../../ixa-derive" }

csv = "^1.3.1"
ctor = "^0.2.8"
serde = "^1.0.217"
rand = "^0.8.5"
rand_distr = "^0.4.3"
paste = "^1.0.15"

[lints]
workspace = true

[[bin]]
name = "births_deaths"
path = "main.rs"
