[package]
name = "ixa_example_births_deaths"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

publish = false

[dependencies]
ixa = { path = "../../../ixa" }
ixa-derive = { path = "../../ixa-derive" }

csv.workspace = true
ctor.workspace = true
serde.workspace = true
rand.workspace = true
rand_distr.workspace = true
paste.workspace = true

[lints]
workspace = true

[[bin]]
name = "births_deaths"
path = "main.rs"
