[package]
name = "ixa_example_network_random"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

publish = false

[dependencies]
ixa = { path = "../../" }

serde.workspace = true
rand_distr.workspace = true
itertools = "0.15.0"
rand.workspace = true

[lints]
workspace = true

[[bin]]
name = "network_random"
path = "main.rs"
