[package]
name = "ixa-wasm-tests"
version = "0.1.0"
description = "Integration tests for the Wasm target"
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
#wasm-bindgen = "0.2.104"
#wasm-bindgen-futures = "0.4.54"
web-sys = { version = "^0.3.77", features = ["Window", "Performance"] }
js-sys = "^0.3.77"
console_error_panic_hook = "0.1.7"

# Explicitly use the Ixa in this same project.
ixa = { path = "../../", default-features = false, features = ["logging"] }
rand_distr.workspace = true
serde.workspace = true



[lints]
workspace = true
